--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,15 @@
     "require": {
         "php": "^8.1",
         "doctrine/annotations": "^2.0",
+        "electrolinux/phpquery": "^0.9.7",
         "guzzlehttp/guzzle": "^7.2",
         "kerigard/laravel-lang-ru": "^1.3",
         "laravel/framework": "^10.0",
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "zircote/swagger-php": "^4.9"
+        "zircote/swagger-php": "^4.9",
+        "ext-curl": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
