--- a/swag.yaml
+++ b/swag.yaml
@@ -6,7 +6,7 @@ info:
   version: 3.0.0
 servers:
   -
-    url: 'https://backend-venari.rfld.ru'
+    url: 'https://venari.backend.rfld.ru'
     description: 'Боевой сервер'
 paths:
   /api/register:
@@ -62,8 +62,8 @@ components:
       properties:
         department_id:
           type: integer
-        position_id:
-          type: integer
+        position:
+          $ref: '#/components/schemas/position'
         description:
           type: string
         salary:
@@ -86,6 +86,19 @@ components:
           type: boolean
         is_outer:
           type: boolean
+        created_at:
+          type: string
+        updated_at:
+          type: string
+      type: object
+    position:
+      properties:
+        name:
+          type: string
+        created_at:
+          type: string
+        updated_at:
+          type: string
       type: object
 externalDocs:
   description: 'Как документировать этот код'
