feat: :sparkles: Добавил парсер постов с хабра
Написал парсер постов с хабра и сделал контроллер для постов. В нём добавил методы для получения всех постов и определённого поста по его id. Вынес их в сваггер.

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "zircote/swagger-php": "^4.9",
-        "ext-curl": "*"
+        "ext-curl": "*",
+        "ext-simplexml": "*",
+        "ext-libxml": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
