--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-curl": "*",
+        "ext-libxml": "*",
+        "ext-simplexml": "*",
         "doctrine/annotations": "^2.0",
         "electrolinux/phpquery": "^0.9.7",
         "guzzlehttp/guzzle": "^7.2",
@@ -14,10 +17,9 @@
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "zircote/swagger-php": "^4.9",
-        "ext-curl": "*",
-        "ext-simplexml": "*",
-        "ext-libxml": "*"
+        "laravel/ui": "^4.5",
+        "pusher/pusher-php-server": "^7.2",
+        "zircote/swagger-php": "^4.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
