--- a/package.json
+++ b/package.json
@@ -5,8 +5,21 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.6",
+        "@vitejs/plugin-vue": "^4.5.0",
         "axios": "^1.1.2",
+        "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.7.2",
-        "vite": "^4.0.0"
+        "postcss-import": "^16.1.0",
+        "sass": "^1.56.1",
+        "vite": "^4.0.0",
+        "vue": "^3.2.37"
+    },
+    "dependencies": {
+        "boxicons": "^2.1.4",
+        "laravel-echo": "^1.16.1",
+        "lodash": "^4.17.21",
+        "picmo": "^5.8.5",
+        "pusher-js": "^8.4.0-rc2"
     }
 }
