--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,9 +18,9 @@ jobs:
           script: |
             cd ${{secrets.PROJECT_FOLDER }};
             cd venari-back;
-            sudo git checkout master;
-            sudo git reset --hard origin/master;
-            sudo git pull origin master;
+            git checkout master;
+            git reset --hard origin/master;
+            git pull origin master;
             php artisan swag:generate;
             cd ..;
             cp -r venari-back/* public_html/;
