docs: :memo: Добавил свагер для роута api/vacancies/{id}

--- a/swag.yaml
+++ b/swag.yaml
@@ -152,9 +152,18 @@ paths:
         - VacancyController
       summary: 'Метод получения подробной информации о вакансии по id'
       operationId: eaa6d5b5a84d934bfc97c0df706eddd2
+      parameters:
+        -
+          name: id
+          description: 'id вакансии'
+          required: true
       responses:
         '200':
           description: 'Ответ при успешном выполнении запроса'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/getVacancyByID'
 components:
   schemas:
     messageType:
@@ -250,17 +259,26 @@ components:
           items:
             $ref: '#/components/schemas/vacancy'
       type: object
+    getVacancyByID:
+      properties:
+        success:
+          type: boolean
+          example: 'true'
+        response:
+          type: array
+          items:
+            $ref: '#/components/schemas/detailVacancy'
+      type: object
     vacancy:
       properties:
         id:
           type: integer
         department_id:
           type: integer
+          nullable: true
         position_id:
           type: integer
         description:
-          type: string
-        salary:
           type: string
         is_online:
           type: boolean
@@ -272,8 +290,6 @@ components:
           type: boolean
         link_to_test_document:
           type: string
-        is_fulltime:
-          type: boolean
         city_id:
           type: integer
         is_closed:
@@ -284,8 +300,222 @@ components:
           format: date
         updated_at:
           format: date
+        responsibilities:
+          type: string
+        requirements:
+          type: string
+        conditions:
+          type: string
+        additional:
+          type: string
+          nullable: true
+        experience_id:
+          type: integer
+          nullable: true
+        employment_id:
+          type: integer
+          nullable: true
+        lower_salary:
+          type: number
+          format: float
+          nullable: true
+        higher_salary:
+          type: number
+          format: float
+          nullable: true
+        image_id:
+          type: integer
+          nullable: true
+      type: object
+    detailVacancy:
+      properties:
+        id:
+          type: integer
+        department:
+          $ref: '#/components/schemas/department'
+        position:
+          $ref: '#/components/schemas/position'
+        description:
+          type: string
+        is_online:
+          type: boolean
+        has_social_support:
+          type: boolean
+        schedule:
+          type: string
+        is_flexible:
+          type: boolean
+        link_to_test_document:
+          type: string
+        city:
+          $ref: '#/components/schemas/city'
+        is_closed:
+          type: boolean
+        is_outer:
+          type: boolean
+        created_at:
+          format: date
+        updated_at:
+          format: date
+        responsibilities:
+          type: string
+        requirements:
+          type: string
+        conditions:
+          type: string
+        additional:
+          type: string
+          nullable: true
+        experience:
+          $ref: '#/components/schemas/experience'
+        employment:
+          $ref: '#/components/schemas/employment'
+        lower_salary:
+          type: number
+          format: float
+          nullable: true
+        higher_salary:
+          type: number
+          format: float
+          nullable: true
+        image:
+          $ref: '#/components/schemas/image'
+        skills:
+          type: array
+          items:
+            $ref: '#/components/schemas/skill'
+      type: object
+    department:
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        created_at:
+          format: date
+        updated_at:
+          format: date
+        company:
+          $ref: '#/components/schemas/company'
+      type: object
+    company:
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        description:
+          type: string
+        established_at:
+          format: date
+        nick_name:
+          type: string
+        created_at:
+          format: date
+        updated_at:
+          format: date
+        image:
+          $ref: '#/components/schemas/image'
+        building:
+          $ref: '#/components/schemas/building'
+      type: object
+    building:
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        created_at:
+          format: date
+        updated_at:
+          format: date
+        street:
+          $ref: '#/components/schemas/street'
+      type: object
+    street:
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        created_at:
+          format: date
+        updated_at:
+          format: date
+        city:
+          $ref: '#/components/schemas/city'
+      type: object
+    skill:
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        created_at:
+          format: date
+        updated_at:
+          format: date
+      type: object
+    city:
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        created_at:
+          format: date
+        updated_at:
+          format: date
+        country:
+          $ref: '#/components/schemas/country'
+      type: object
+    country:
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        created_at:
+          format: date
+        updated_at:
+          format: date
+      type: object
+    image:
+      properties:
+        id:
+          type: integer
+        image:
+          type: string
+        description:
+          type: string
+        created_at:
+          format: date
+        updated_at:
+          format: date
       type: object
     position:
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        created_at:
+          format: date
+        updated_at:
+          format: date
+      type: object
+    employment:
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        created_at:
+          format: date
+        updated_at:
+          format: date
+      type: object
+    experience:
       properties:
         id:
           type: integer
